--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -16,6 +16,9 @@
         <action
             android:id="@+id/action_fragmentAccueil_to_fragmentImage"
             app:destination="@id/fragmentImage" />
+        <action
+            android:id="@+id/action_fragmentAccueil_to_fragmentMaps"
+            app:destination="@id/fragmentMaps" />
     </fragment>
     <fragment
         android:id="@+id/fragmentChat"
@@ -27,4 +30,9 @@
         android:name="com.example.navigationbar.FragmentImage"
         android:label="fragment_image"
         tools:layout="@layout/fragment_image" />
+    <fragment
+        android:id="@+id/fragmentMaps"
+        android:name="com.example.navigationbar.MapsFragment"
+        android:label="fragment_maps"
+        tools:layout="@layout/fragment_maps" />
 </navigation>
